--- a/myportfolio/public/index.html
+++ b/myportfolio/public/index.html
@@ -13,6 +13,12 @@
     <title>Ebai Portfolio</title>
   </head>
   <body>
+    <p>Hello I'm </p>
+    <h1>Ebai Enownku Jane</h1>
+    <p>Software Engineering Student</p>
+    <button class="btn">Download CV </button>
+    <button class="btn">Let's Talk</button>
+    <img src="logo512.png" alt="" class="my_image">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     
